# WorkKnow

./: .coveragerc  .mdlrc  README.md  pyproject.toml
.github/workflows/: build.yml
actionstory/: configure.py  constants.py  create.py  main.py  produce.py  request.py
csv/: analyze_actions_projects.csv
tests/: __init__.py  test_constants.py  test_request.py
workknow/: __init__.py  analyze.py  combine.py  concatenate.py  configure.py  constants.py  debug.py  display.py  environment.py  files.py  main.py  produce.py  release.py  request.py  util.py
workknow/plugins/: plugin_CorrelateCriticalityToConclusion.py
